--- a/assignment/pages/ourdailytours.html
+++ b/assignment/pages/ourdailytours.html
@@ -66,9 +66,9 @@ html {
 
 
 .container {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         display: grid;
-        gap: 20px;
+        gap: 10px;
       }
       /* 575*/
       @media screen and (min-width: 0px) and (max-width: 575px) {
@@ -77,11 +77,11 @@ html {
         }
       }
 
-      /* 576-767 == 2 cards */
+      /* 576-767 == 1 cards */
 
       @media screen and (min-width: 576px) and (max-width: 767px) {
         .container {
-          grid-template-columns: repeat(2, 1fr);
+          grid-template-columns: repeat(1, 1fr);
         }
       }
 
@@ -92,24 +92,24 @@ html {
         }
       }
 
-      /* 992-1199 == 4 cards */
+      /* 992-1199 == 2 cards */
       @media screen and (min-width: 992px) and (max-width: 1199px) {
         .container {
-          grid-template-columns: repeat(4, 1fr);
+          grid-template-columns: repeat(2, 1fr);
         }
       }
 
-      /* 1200-1399 ==  4 cards*/
+      /* 1200-1399 ==  3 cards*/
       @media screen and (min-width: 1200px) and (max-width: 1399px) {
         .container {
-          grid-template-columns: repeat(4, 1fr);
+          grid-template-columns: repeat(3, 1fr);
         }
       }
 
-      /* 1400 == 4 cards */
+      /* 1400 == 3 cards */
       @media screen and (min-width: 1400px) {
         .container {
-          grid-template-columns: repeat(4, 1fr);
+          grid-template-columns: repeat(3, 1fr);
         }
       }
 
@@ -196,7 +196,6 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
 <br>
 <br>
 
-  
 
    <div class="row">
   <div class="column">
@@ -273,11 +272,16 @@ Without our feeding tours the animals would be lost. Your donation helps us to s
       </div>
     </div>
   </div> 
-  </table>
+
 </div> 
 </div>
-
 </div>
+</div>
+</div>
+</div>
+</div>
+</div>
+
 <footer class="footer">
         <div class="social-footer">
         
